# Python-Projects

01_Unit-Convertor/: README.md  main.py  pyproject.toml  requirements.txt
02_Password-Strength-Meter/: README.md  app.py  password_utils.py  pyproject.toml  requirements.txt
